--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.3",
+    "mongodb": "^3.5.2",
+    "mqtt": "^3.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-chartjs-2": "^2.9.0",
