--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "body-parser": "^1.19.0",
     "chart.js": "^2.9.3",
+    "concurrently": "^5.1.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "mongodb": "^3.5.2",
+    "mongodb-client-encryption": "^1.0.1",
     "mqtt": "^3.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
@@ -16,6 +21,8 @@
     "react-scripts": "3.3.0"
   },
   "scripts": {
+    "start_db": "mongod --dbpath=./temperature_db &",
+    "start_api": "node ./temp_monitoring/temp_logger.js &",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
